# http-filehost-demo

./: Cargo.toml  README.md  encoding.json
src/: main.rs  server.rs
