[package]
name = "http-filehost-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
clap = { version = "3.2.7", features = ["derive"] }
